--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,5 @@
     <string name="optionDuration">Duration</string>
     <string name="startTime">Start time</string>
     <string name="btnChoseOption">CHOSE THIS OPTION</string>
+    <string name="offers">Offers</string>
 </resources>
