--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,5 @@
     <string name="startTime">Start time</string>
     <string name="btnChoseOption">CHOSE THIS OPTION</string>
     <string name="offers">Offers</string>
+    <string name="pleaseWait">Please wait</string>
 </resources>
