--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,4 +33,12 @@
     <string name="choseLicense">Please choose your license</string>
     <string name="choseCity">Please choose city!</string>
     <string name="btnRetry">RETRY</string>
+    <string name="firstName">First name</string>
+    <string name="lastName">Last name</string>
+    <string name="address">Address</string>
+    <string name="postalCode">Postal Code</string>
+    <string name="city">City</string>
+    <string name="phone">Phone</string>
+    <string name="email">Email</string>
+    <string name="serverNotResp">Server is not responsible, please try again later</string>
 </resources>
