--- a/trunk/android-app/app/src/main/res/values/strings.xml
+++ b/trunk/android-app/app/src/main/res/values/strings.xml
@@ -42,4 +42,8 @@
     <string name="phone">Phone</string>
     <string name="email">Email</string>
     <string name="serverNotResp">Server is not responsible, please try again later</string>
+    <string name="subscribe_firstname">First name</string>
+    <string name="subscribe_lastname">Last name</string>
+    <string name="subscribe_email">E-mail address</string>
+    <string name="subscribe_title">Subscribe</string>
 </resources>
