--- a/trunk/android-app/app/src/main/res/values/strings.xml
+++ b/trunk/android-app/app/src/main/res/values/strings.xml
@@ -57,4 +57,5 @@
     <string name="details_btn_book_now">Book now</string>
 
     <string name="facebook_app_id">1691716511044593</string>
+    <string name="server_client_id">200652897389-ilput5gqu5sm6b7g5g4dbfoi00ofd7r3.apps.googleusercontent.com</string>
 </resources>
