--- a/trunk/android-app/app/src/main/res/values/strings.xml
+++ b/trunk/android-app/app/src/main/res/values/strings.xml
@@ -58,4 +58,6 @@
 
     <string name="facebook_app_id">1691716511044593</string>
     <string name="server_client_id">200652897389-ilput5gqu5sm6b7g5g4dbfoi00ofd7r3.apps.googleusercontent.com</string>
+    <string name="twitter_consumer_key">tT7PhwjwXb8dEXbhQzI529VR4</string>
+    <string name="twitter_consumer_secret">C4wijpAOBWWwUVsmtyoMEhWUQD5P6BFulUDTVQGQmrJI32BlaT</string>
 </resources>
