--- a/trunk/ddscanner/app/src/main/res/values/strings.xml
+++ b/trunk/ddscanner/app/src/main/res/values/strings.xml
@@ -50,7 +50,7 @@
     <string name="details_currents">Currents</string>
     <string name="details_level">Diver level</string>
     <string name="details_description">Description</string>
-    <string name="details_btn_book_now">Book now</string>
+    <string name="details_btn_book_now">Contact Dive Centers</string>
 
     <string name="facebook_app_id">1691716511044593</string>
     <string name="server_client_id">200652897389-onnv3dgvcnf7bj8dku3psjntif6hiua0.apps.googleusercontent.comm</string>
