--- a/trunk/ddscanner/app/src/main/res/values/strings.xml
+++ b/trunk/ddscanner/app/src/main/res/values/strings.xml
@@ -61,5 +61,7 @@
     <!-- Feedback dialog -->
     <string name="feedback_text">Do you want to leave feedback on DDScanner?</string>
     <string name="feedback_title">Gongratulations!</string>
+    <string name="filter_only_best_rated">Only best rated</string>
+    <string name="filters_filters">Filters</string>
 
 </resources>
