--- a/trunk/ddscanner/app/src/main/res/values/strings.xml
+++ b/trunk/ddscanner/app/src/main/res/values/strings.xml
@@ -59,7 +59,6 @@
     <string name="twitter_consumer_key">tT7PhwjwXb8dEXbhQzI529VR4</string>
     <string name="twitter_consumer_secret">C4wijpAOBWWwUVsmtyoMEhWUQD5P6BFulUDTVQGQmrJI32BlaT</string>
 
-    <!-- Feedback dialog -->
     <string name="feedback_text">Do you want to leave feedback on DDScanner?</string>
     <string name="feedback_title">Gongratulations!</string>
     <string name="filter_only_best_rated">Only best rated</string>
@@ -71,5 +70,6 @@
     <string name="btn_no">NO</string>
     <string name="the_information_is_valid">The information is valid?</string>
     <string name="tap_on_star_to_review">Tap on star to review</string>
+    <string name="diveSpot">Dive Spot</string>
 
 </resources>
