Check in peoples activity

--- a/trunk/ddscanner/app/src/main/res/values/strings.xml
+++ b/trunk/ddscanner/app/src/main/res/values/strings.xml
@@ -71,5 +71,6 @@
     <string name="the_information_is_valid">The information is valid?</string>
     <string name="tap_on_star_to_review">Tap on star to review</string>
     <string name="diveSpot">Dive Spot</string>
+    <string name="people">People</string>
 
 </resources>
