--- a/trunk/ddscanner/app/src/main/res/values/strings.xml
+++ b/trunk/ddscanner/app/src/main/res/values/strings.xml
@@ -86,5 +86,6 @@
     <string name="sc_name">Sc name</string>
     <string name="order">Order</string>
     <string name="scclass">Class</string>
+    <string name="reviews">Reviews</string>
 
 </resources>
