Validation information layout

--- a/trunk/ddscanner/app/src/main/res/values/strings.xml
+++ b/trunk/ddscanner/app/src/main/res/values/strings.xml
@@ -87,5 +87,6 @@
     <string name="order">Order</string>
     <string name="scclass">Class</string>
     <string name="reviews">Reviews</string>
+    <string name="thanks_for_your_answer">Thanks for your answer!</string>
 
 </resources>
