Sending sealife data to server completed

--- a/trunk/ddscanner/app/src/main/res/values/strings.xml
+++ b/trunk/ddscanner/app/src/main/res/values/strings.xml
@@ -88,5 +88,6 @@
     <string name="scclass">Class</string>
     <string name="reviews">Reviews</string>
     <string name="thanks_for_your_answer">Thanks for your answer!</string>
+    <string name="dive_spots">DIVE SPOTS</string>
 
 </resources>
