Showing checked sealifes Add dive spot request

--- a/trunk/ddscanner/app/src/main/res/values/strings.xml
+++ b/trunk/ddscanner/app/src/main/res/values/strings.xml
@@ -96,5 +96,6 @@
     <string name="max_depth_meters">Max depth (meters)</string>
     <string name="location">Location</string>
     <string name="add_manually">ADD MANUALLY</string>
+    <string name="sealife">SEALIFE</string>
 
 </resources>
