--- a/trunk/ddscanner/app/src/main/res/values/strings.xml
+++ b/trunk/ddscanner/app/src/main/res/values/strings.xml
@@ -108,5 +108,7 @@
     <string name="skobka">)</string>
     <string name="peoples_checked_in_here"> people checked in here</string>
     <string name="title_activity_main2">Main2Activity</string>
+    <string name="save_changes">SAVE CHANGES</string>
+    <string name="cancel">cancel</string>
 
 </resources>
