--- a/trunk/ddscanner/app/src/main/res/values/strings.xml
+++ b/trunk/ddscanner/app/src/main/res/values/strings.xml
@@ -110,5 +110,12 @@
     <string name="title_activity_main2">Main2Activity</string>
     <string name="save_changes">SAVE CHANGES</string>
     <string name="cancel">cancel</string>
+    <string name="question_edit_dive_spot">Do you want to edit this dive spot yourself?</string>
+    <string name="no_just_vote_answer">No, just vote</string>
+    <string name="dialog_title_check_in">Check in</string>
+    <string name="dialog_check_in_content">Do you really want to check in? \n This spot will be show in your profile</string>
+    <string name="dialog_check_in_no">OK</string>
+    <string name="dialog_cancel">CANCEL</string>
+    <string name="ok">OK</string>
 
 </resources>
