--- a/trunk/ddscanner/app/src/main/res/values/strings.xml
+++ b/trunk/ddscanner/app/src/main/res/values/strings.xml
@@ -118,4 +118,8 @@
     <string name="dialog_cancel">CANCEL</string>
     <string name="ok">OK</string>
 
+    <string name="font_roboto_medium">sans-serif</string>
+    <string name="filter_object">Object</string>
+    <string name="filter_label">Level</string>
+
 </resources>
