--- a/trunk/ddscanner/app/src/main/res/values/strings.xml
+++ b/trunk/ddscanner/app/src/main/res/values/strings.xml
@@ -130,5 +130,8 @@
     <string name="filter_label">Level</string>
     <string name="creator">Creator</string>
     <string name="editor">Editor</string>
+    <string name="error_turn_on_location_provider">Please give the app permission to use your location. You can find this option in your device settings.</string>
+    <string name="error_no_internet">No internet connection</string>
+    <string name="open_settings">OPEN SETTINGS</string>
 
 </resources>
