--- a/trunk/ddscanner/app/src/main/res/values/strings.xml
+++ b/trunk/ddscanner/app/src/main/res/values/strings.xml
@@ -136,5 +136,6 @@
     <string name="open_settings">OPEN SETTINGS</string>
     <string name="grant_permission">GRANT PERMISSION</string>
     <string name="contact_dive_centers">Contact dive centers</string>
+    <string name="dive_center">Dive Center</string>
 
 </resources>
