--- a/trunk/ddscanner/app/src/main/res/values/strings.xml
+++ b/trunk/ddscanner/app/src/main/res/values/strings.xml
@@ -137,5 +137,6 @@
     <string name="grant_permission">GRANT PERMISSION</string>
     <string name="contact_dive_centers">Contact dive centers</string>
     <string name="dive_center">Dive Center</string>
+    <string name="you_must_login_to_add_divespot">You must login to add divespot</string>
 
 </resources>
