--- a/trunk/ddscanner/app/src/main/res/values/strings.xml
+++ b/trunk/ddscanner/app/src/main/res/values/strings.xml
@@ -138,5 +138,6 @@
     <string name="contact_dive_centers">Contact dive centers</string>
     <string name="dive_center">Dive Center</string>
     <string name="you_must_login_to_add_divespot">You must login to add divespot</string>
+    <string name="e_mail">E-mail</string>
 
 </resources>
