--- a/trunk/ddscanner/app/src/main/res/values/strings.xml
+++ b/trunk/ddscanner/app/src/main/res/values/strings.xml
@@ -139,5 +139,10 @@
     <string name="dive_center">Dive Center</string>
     <string name="you_must_login_to_add_divespot">You must login to add divespot</string>
     <string name="e_mail">E-mail</string>
+    <string name="search_sealife">Search sealife</string>
+    <string name="favorites">Favorites</string>
+    <string name="checkin">Check in</string>
+    <string name="added_ds">Added</string>
+    <string name="edited_ds">Edited</string>
 
 </resources>
