Fix crash in activity notifications fragment

--- a/trunk/ddscanner/app/src/main/res/values/strings.xml
+++ b/trunk/ddscanner/app/src/main/res/values/strings.xml
@@ -60,7 +60,7 @@
 
     <string name="feedback_text">Do you want to leave feedback on DDScanner?</string>
     <string name="feedback_title">Gongratulations!</string>
-    <string name="filter_only_best_rated">Only best rated</string>
+    <string name="filter_only_best_rated">Only best-rated</string>
     <string name="filters_filters">Filters</string>
     <string name="btn_save">SAVE</string>
     <string name="object_characteristic">Object</string>
