New no permissions screens

--- a/trunk/ddscanner/app/src/main/res/values/strings.xml
+++ b/trunk/ddscanner/app/src/main/res/values/strings.xml
@@ -149,4 +149,6 @@
     <string name="edited_ds">Edited</string>
     <string name="toast_server_error">Error. Try again later</string>
     <string name="sealife_already_added">It has already been added</string>
+    <string name="please_connect_to_a_network_to_continue">Please connect to a network to continue</string>
+    <string name="refresh">REFRESH</string>
 </resources>
