--- a/trunk/ddscanner/app/src/main/res/values/strings.xml
+++ b/trunk/ddscanner/app/src/main/res/values/strings.xml
@@ -155,4 +155,5 @@
     <string name="pick_location">Pick location</string>
     <string name="search">Search</string>
     <string name="dive_spot">Dive Spot</string>
+    <string name="my_current_location">My current location</string>
 </resources>
