--- a/trunk/ddscanner/app/src/main/res/values/strings.xml
+++ b/trunk/ddscanner/app/src/main/res/values/strings.xml
@@ -170,4 +170,5 @@
     <string name="show_privacy_policy">By signing up, you agree to the Terms of Service and Privacy Policy</string>
     <string name="login_to_continue">Login to continue</string>
     <string name="deep_dive_scanner">Deep Dive Scanner</string>
+    <string name="new_dive_spot">NEW DIVE SPOT</string>
 </resources>
