Profile dialog reformat

--- a/trunk/ddscanner/app/src/main/res/values/strings.xml
+++ b/trunk/ddscanner/app/src/main/res/values/strings.xml
@@ -171,4 +171,7 @@
     <string name="login_to_continue">Login to continue</string>
     <string name="deep_dive_scanner">Deep Dive Scanner</string>
     <string name="new_dive_spot">NEW DIVE SPOT</string>
+    <string name="open_on_facebook">Open on facebook</string>
+    <string name="open_on_twitter">Open on twitter</string>
+    <string name="open_on_google_plus">Open on Google+</string>
 </resources>
