--- a/trunk/ddscanner/app/src/main/res/values/strings.xml
+++ b/trunk/ddscanner/app/src/main/res/values/strings.xml
@@ -176,4 +176,6 @@
     <string name="open_on_google_plus">Open on Google+</string>
     <string name="locatio_dialog_title">To work with ddscanner you must enable location service. Do you want to do this?</string>
     <string name="add_photos_toolbar_title">Add photos</string>
+    <string name="no_notifications">No notifications</string>
+    <string name="here_will_be_displayed_last_notifications">Here will be displayed last notifications</string>
 </resources>
