--- a/trunk/ddscanner/app/src/main/res/values/strings.xml
+++ b/trunk/ddscanner/app/src/main/res/values/strings.xml
@@ -178,4 +178,6 @@
     <string name="add_photos_toolbar_title">Add photos</string>
     <string name="no_notifications">No notifications</string>
     <string name="here_will_be_displayed_last_notifications">Here will be displayed last notifications</string>
+    <string name="profile">Profile</string>
+    <string name="ed">Edited</string>
 </resources>
