--- a/trunk/ddscanner/app/src/main/res/values/strings.xml
+++ b/trunk/ddscanner/app/src/main/res/values/strings.xml
@@ -180,4 +180,5 @@
     <string name="here_will_be_displayed_last_notifications">Here will be displayed last notifications</string>
     <string name="profile">Profile</string>
     <string name="ed">Edited</string>
+    <string name="toolbar_title_check_ins">Check Ins</string>
 </resources>
