White rectangles in edit dive spot fix

--- a/trunk/ddscanner/app/src/main/res/values/strings.xml
+++ b/trunk/ddscanner/app/src/main/res/values/strings.xml
@@ -95,7 +95,7 @@
     <string name="max_depth_meters">Max depth (meters)</string>
     <string name="location">Location</string>
     <string name="add_manually">ADD MANUALLY</string>
-    <string name="sealife">SEA LIFE</string>
+    <string name="sealife">Sea Life</string>
     <string name="edit_dive_spot">Edit dive spot</string>
     <string name="edit_profile">Edit profile</string>
     <string name="created">Created</string>
