Some string fix

--- a/trunk/ddscanner/app/src/main/res/values/strings.xml
+++ b/trunk/ddscanner/app/src/main/res/values/strings.xml
@@ -90,7 +90,7 @@
     <string name="dive_spots">DIVE SPOTS</string>
     <string name="check_in">CHECK IN</string>
     <string name="added">ADDED</string>
-    <string name="edited">EDITED</string>
+    <string name="edited">Edited</string>
     <string name="edit">EDIT</string>
     <string name="max_depth_meters">Max depth (meters)</string>
     <string name="location">Location</string>
