--- a/trunk/ddscanner/app/src/main/res/values/strings.xml
+++ b/trunk/ddscanner/app/src/main/res/values/strings.xml
@@ -210,4 +210,20 @@
     <string name="terms">Terms and Conditions of Use</string>
     <string name="min">Min</string>
     <string name="max">Max</string>
+    <string name="guide_to_dds">Guide to DDscanner</string>
+    <string name="terms_of_use">Terms of Use</string>
+    <string name="privacy_policy">Privacy Policy</string>
+    <string name="about_dds">About DDScanner</string>
+    <string name="guide_question_1">How to become an expert?</string>
+    <string name="guide_question_2">How to add a dive spot?</string>
+    <string name="guide_question_3">How to add sea life?</string>
+    <string name="guide_question_4">How to edit a dive spot?</string>
+    <string name="guide_question_5">How to leave a review?</string>
+    <string name="guide_question_6">Why can’t I edit a dive spot?</string>
+    <string name="guide_description_1">The most active users can become experts of a certain country due to their activity. We really appreciate every member of our diving community and grant the status of experts to those who participate actively in Deep Dive Scanner’s life. That can be those who left lots of reviews or added new dive spots, edited the information and shared lots of photos, etc.  Divers can ask experts for their opinion that is highly respective and informative. We will also give experts new bonuses that will be helpful .</string>
+    <string name="guide_description_2">You can add a new dive spot that we could have missed. Just open your app and find the icon with plus on the right side, tap on it and fill in all the fields and add photos to tell our diving community more about this dive spot.</string>
+    <string name="guide_description_3">If you did not find a certain fish or other marine inhabitant you can create it either while adding a new dive spot or editing the existing one. Just tap on plus, type the name of the inhabitant you’d like to add, after that you see «add new», tap on this button and fill all the field required to provide necessary information to describe this inhabitant.</string>
+    <string name="guide_description_4">Open your app and find the dive spot you’d like to edit. Scroll down and you see the question «Is the information valid?». If you want to change choose «no» and correct the information that is not accurate.</string>
+    <string name="guide_description_5">Open your app and find the dive spot you’d like to leave a review . Scroll down and you see the question «Is the information valid?». If you want to change choose «no» and correct the information that is not accurate.</string>
+    <string name="guide_description_6">Dive spots that have been changed and confirmed by experts cannot be changed again.</string>
 </resources>
