--- a/trunk/ddscanner/app/src/main/res/values/strings.xml
+++ b/trunk/ddscanner/app/src/main/res/values/strings.xml
@@ -226,4 +226,6 @@
     <string name="guide_description_4">Open your app and find the dive spot you’d like to edit. Scroll down and you see the question «Is the information valid?». If you want to change choose «no» and correct the information that is not accurate.</string>
     <string name="guide_description_5">Open your app and find the dive spot you’d like to leave a review . Scroll down and you see the question «Is the information valid?». If you want to change choose «no» and correct the information that is not accurate.</string>
     <string name="guide_description_6">Dive spots that have been changed and confirmed by experts cannot be changed again.</string>
+    <string name="about_dds_text">We created DDScanner because we love diving. Time is valuable both under and above the surface of the water as it’s our most precious possession. We live now and don’t like planning in advance for life is so unpredictable. We should be able to «blow bubbles» anywhere, anytime, on our own terms. \n \nLet’s start the scanning…</string>
+    <string name="contact_us">Contact Us</string>
 </resources>
