--- a/trunk/ddscanner/app/src/main/res/values/strings.xml
+++ b/trunk/ddscanner/app/src/main/res/values/strings.xml
@@ -231,4 +231,5 @@
     <string name="comment_edit">Edit</string>
     <string name="comment_delete">Delete</string>
     <string name="was_this_information_useful">Was this information useful?</string>
+    <string name="report">Report</string>
 </resources>
