--- a/trunk/ddscanner/app/src/main/res/values/strings.xml
+++ b/trunk/ddscanner/app/src/main/res/values/strings.xml
@@ -232,4 +232,5 @@
     <string name="comment_delete">Delete</string>
     <string name="was_this_information_useful">Was this information useful?</string>
     <string name="report">Report</string>
+    <string name="add_new">ADD NEW</string>
 </resources>
